# quick-vanish

./: .clang-format  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  data_loader.cpp  data_loader.h  license.txt  main.cpp  qvanish-lib.vcxproj  qvanish-lib.vcxproj.filters  qvanish-tests.ut.cpp  qvanish-ut.vcxproj  qvanish-ut.vcxproj.filters  qvanish-ut[1]_include.cmake  qvanish-ut[1]_tests.cmake  qvanish.cpp  qvanish.h  qvanish.hpp  qvanish.sln  qvanish.vcxproj  qvanish.vcxproj.filters
qvanish-lib.dir/MinSizeRel/: qvanish-lib.lib.recipe
qvanish-lib.dir/MinSizeRel/qvanish-lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  qvanish-lib.lastbuildstate
qvanish.dir/MinSizeRel/: qvanish.exe.recipe
qvanish.dir/MinSizeRel/qvanish.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: data_loader.cpp  data_loader.h  main.cpp  qvanish-tests.ut.cpp  qvanish.cpp  qvanish.h
